--- a/yzwsc/show/pom.xml
+++ b/yzwsc/show/pom.xml
@@ -70,6 +70,17 @@
             <artifactId>druid</artifactId>
             <version>1.1.12</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.8.0</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.8.0</version>
+        </dependency>
     </dependencies>
 
     <build>
